fixing lobby spacing

--- a/frequent-fliers-html/lobby.css
+++ b/frequent-fliers-html/lobby.css
@@ -200,6 +200,7 @@ button:hover {
   }
 
   .instruction{
+    margin:auto;
     text-align: center;
     width: 100%
   }
